# excalibur-detector

./: .gitattributes  .gitignore  .gitremotes  .travis-install-odin.sh  .travis.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  RELEASE.md  build
.devcontainer/: devcontainer.json
.github/workflows/: cpp.yml  python.yml
configure/: RELEASE
control/: MANIFEST.in  README.md  setup.cfg  setup.py
control/excalibur/: adapter.py  calibration_files.py  config_parser.py  definitions.py  detector.py  detector_sim.py  efuse_id_parser.py  fem.py  fem_api_parameters.py  hl_detector.py  parameter.py  server.py
control/excalibur/client/: client.py  test_app.py
control/excalibur/testing/: test_adapter.py  test_fem.py  test_hl_detector.py  test_plugin.py
control/fem_api_extension/api/include/: ExcaliburFemClient.h  FemClient.h  asicControlParameters.h  femApi.h  mpx3Parameters.h
control/fem_api_extension/api/src/: ExcaliburFemClient.cpp  ExcaliburFemClientMpx3.cpp  FemClient.cpp  FemTransaction.cpp  femApi.cpp
control/fem_api_extension/api_stub/: femApi.cpp  femApi.h
control/src/excalibur_control/: __init__.py  _version.py  calibration_files.py  config_parser.py  parameter.py
control/src/excalibur_control/testing/: test_hl_detector.py  test_plugin.py
control/src/fem_api_extension/: fem_api_wrapper.c
control/src/fem_api_extension/api/include/: ExcaliburPowerCardDevices.h
control/src/static/js/: odin-data.js
cpp/: CMakeLists.txt
cpp/cmake/: FindODINDATA.cmake
cpp/data/: CMakeLists.txt
cpp/data/frameProcessor/include/: ExcaliburProcessPlugin.h
cpp/data/frameProcessor/src/: ExcaliburProcessPlugin.cpp
cpp/data/frameProcessor/test/: CMakeLists.txt
cpp/data/frameReceiver/include/: ExcaliburFrameDecoder.h
cpp/data/frameSimulator/include/: ExcaliburFrameSimulatorPlugin.h
cpp/data/frameSimulator/src/: CMakeLists.txt
cpp/data/test/integrationTest/: CMakeLists.txt
cpp/data/test/integrationTest/config/: CMakeLists.txt  excalibur-fp.json  excalibur-fr.json  excalibur.json  test.json
data/: CMakeLists.txt
data/cmake/: FindOdinData.cmake
data/common/include/: ExcaliburDefinitions.h
data/config/: fr_test_excalibur_1.config  fr_test_excalibur_2.config
data/frameProcessor/include/: ExcaliburProcessPlugin.h
data/frameProcessor/src/: ExcaliburProcessPlugin.cpp
data/frameProcessor/test/: ExcaliburFrameProcessorTest.cpp
data/frameReceiver/include/: ExcaliburFrameDecoder.h
data/frameReceiver/src/: ExcaliburFrameDecoder.cpp
data/frameSimulator/include/: ExcaliburFrame.h  ExcaliburFrameSimulatorPlugin.h
data/frameSimulator/src/: CMakeLists.txt  ExcaliburFrame.cpp  ExcaliburFrameSimulatorPlugin.cpp
data/test/integrationTest/: CMakeLists.txt
data/test/integrationTest/config/: excalibur-fp.json  excalibur-fr.json  excalibur.ini  excalibur.json  test.ini  test.json
docker/: Dockerfile
python/: MANIFEST.in  README.md  setup.cfg  setup.py
python/src/excalibur_detector/: __init__.py  _version.py
python/src/excalibur_detector/control/: __init__.py  adapter.py  calibration_files.py  config_parser.py  definitions.py  detector.py  fem.py  hl_detector.py  parameter.py
python/src/excalibur_detector/control/client/: config_parser.py  test_app.py
python/src/excalibur_detector/control/static/: index.html
python/src/excalibur_detector/control/testing/: test_adapter.py  test_detector.py  test_fem.py  test_hl_detector.py  test_plugin.py
(+9 files in other folders)
