[metadata]
name = excalibur-control
description = EXCALIBUR detector plugins for ODIN control
url = https://github.com/dls-controls/excalibur-detector/control
author = Tim Nicholls
author_email = tim.nicholls@stfc.ac.uk
license = Apache License 2.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src

python_requires = >=3.7

install_requires =
    odin-control
    configparser
    enum34

[options.extras_require]
# For development tests/docs
dev =
    pytest-cov

[options.packages.find]
where = src

[options.entry_points]
# Include a command line script
console_scripts =
    excalibur_control  = excalibur_control.server:main
    excalibur_test_app  = excalibur_control.client.test_app:main

[flake8]
max-line-length = 100

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    ./
    **/site-packages/

[versioneer]
VCS = git
style = pep440
versionfile_source = src/excalibur_control/_version.py
versionfile_build = excalibur_control/_version.py
tag_prefix=
